# rive-rs-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.sisyphus/plans/: post-pr26-roadmap.md
data/: init_ledger.sql  log_attempt.sh
demo/: index.html  serve.js
docs/: ai-prompt-cookbook.v1.md  cookbook.md  format-spec.md  implementation-plan.md  install.md  release.md  scene.schema.v1.json  testing-strategy.md
evals/suites/: prompt_lab.v1.json
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse_riv/: minimal.riv
fuzz/fuzz_targets/: fuzz_parse_riv.rs
scripts/: run_race.sh
skills/: README.md
skills/claude-code/: mcp-config.json
skills/opencode/: rive-animation.md
src/: lib.rs  main.rs
src/ai/: config.rs  error.rs  eval.rs  mod.rs  openai.rs  provider.rs  repair.rs  templates.rs
src/builder/: animations.rs  mod.rs  objects.rs  parsers.rs  scene.rs  spec.rs  state_machines.rs  validation.rs
src/cli/: mod.rs
src/encoder/: binary_writer.rs  header.rs  mod.rs  toc.rs
src/mcp/: mod.rs
src/objects/: AGENTS.md  animation.rs  artboard.rs  assets.rs  base.rs  bones.rs  constraints.rs  core.rs  data_binding.rs  generated_registry.rs  layout.rs  mod.rs  paint.rs  shapes.rs  state_machine.rs  text.rs
src/validator/: binary_reader.rs  inspect.rs  mod.rs  parser.rs
tests/: e2e.rs
tests/fixtures/: animation.json  artboard_preset.json  assets.json  blend_animation.json  bones.json  button_states.json  clipping_shape.json  color_animation.json  comparison_clip_tests.json  comparison_quantize_test.json  comparison_trim.json  constraints.json  cubic_asymmetric.json  cubic_easing.json  data_binding.json  draw_rules.json  elastic_interpolator.json  empty_artboard.json  event_test.json  follow_path_constraint.json  (+31 more)
(+11 files in other folders)
