[package]
name = "rive-cli"
version = "0.1.0"
edition = "2024"
description = "Feature-complete CLI for programmatic creation and manipulation of Rive (.riv) animation files"
license = "MIT"
repository = "https://github.com/George-RD/rive-rs-cli"

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
