[package]
name = "rive-cli"
version = "0.1.0"
edition = "2024"
description = "Feature-complete CLI for programmatic creation and manipulation of Rive (.riv) animation files"
license = "MIT"
repository = "https://github.com/George-RD/rive-rs-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
