[package]
name = "rive-cli"
version = "0.1.0"
edition = "2024"
description = "Feature-complete CLI for programmatic creation and manipulation of Rive (.riv) animation files"
license = "MIT"
repository = "https://github.com/George-RD/rive-rs-cli"

[lib]
name = "rive_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
